# BioSim

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
docs/: animal.rst  conf.py  index.rst  island.rst  landscape.rst  plotter.rst  simulation.rst  stateloader.rst
examples/: both_fauna.py  carnivores_only.py  check_sim.py  herbi.py  herbivores_only.py  sample_sim.py  save_and_load.py  saving_image_movie.py  saving_logs.py
reference_examples/: mono_hc.py  mono_ho.py
src/: custom_exceptions.py  island.py  plotter.py  simulation.py
src/animals/: carnivore.py
src/biosim/: __init__.py  state_loader.py
src/biosim/animals/: animal.py  herbivore.py
src/biosim/landscape/: baseland.py  desert.py  lowland.py
src/landscape/: highland.py  water.py
tests/: default_params.py  test_animal.py  test_baseland.py  test_biosim_interface.py  test_island.py  test_simulation.py
