# Metadata: Information about the package, used by package managers.
[metadata]
name = biosim

# Obtain version and author info from package,
# usually defined in __init__.py
version = attr: biosim.__version__
author = attr: biosim.__author__
author_email = attr: biosim.__email__

# Provide description, long version picked up from file.
description = Simulation of the fauna on the island of Rossumøya
long_description = file: README.md
long_description_content_type = text/markdown

# Homepage for package and specific URLs
url = https://gitlab.com/nmbu.no/emner/inf200/h2021/january-teams/a02_kristoffer_nissan/biosim-a02-kristoffer-nissan
project_urls =
    Bug Tracker = https://gitlab.com/nmbu.no/emner/inf200/h2021/january-teams/a02_kristoffer_nissan/biosim-a02-kristoffer-nissan/-/issues

# License information
license = MIT License

# Classifiers, for options, see https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

# More information about requirements
[options]
# Python version required
python_requires = >=3.8

# Other packages required (eg numpy, pandas, ...)
# Do NOT list packages from the Python Standard Library
#    https://docs.python.org/3.9/library/index.html
install_requires =
    ffmpeg-python
    matplotlib
    numpy
    pandas
    scipy

# Which packages to include: tell packaging mechanism to search in src
package_dir =
    = src
packages = find:

# Scripts to also include in distribution package
scripts =
    examples/both_fauna.py
    examples/carnivores_only.py
    examples/herbivores_only.py
    examples/saving_image_movie.py
    examples/saving_logs.py

# Tell package-finding mechanism where to search
[options.packages.find]
where = src

# Tell our PEP8 checker that we allow 100 character lines
[flake8]
max-line-length = 100

# Other configuration information could follow here